--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.0.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "highlight.js": "^11.9.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
