--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "clsx": "^2.0.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
-    "highlight.js": "^11.9.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "rehype-pretty-code": "^0.12.6",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "shikiji": "^0.9.19",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
